--- a/conky.conf
+++ b/conky.conf
@@ -62,14 +62,14 @@ conky.text = [[
   Uptime $alignr $uptime
   Distribution $alignr $distribution
 
-  # Intel Core i7-6700HQ
+  # Intel Core i5-9600K
   ${font Open Sans:Bold:size=10}${color 36D846}i7-6700-HQ ${hr 2}$color${font}${offset 1}
   $color${font}Usage $alignr $cpu %
   $color${font}Frequency $alignr $freq_g Ghz
   $color${font}CPU Usage $cpubar
   Temperature $alignr ${acpitemp}°C
 
-  # NVidia GeForce® GTX 960M
+  # NVidia GeForce® RTX 3060
   ${font Open Sans:Bold:size=10}${color 36D846}GTX-960M ${hr 2}$color${font}${offset 1}
 
   Frequency $alignr ${nvidia gpufreq} Mhz
@@ -97,7 +97,7 @@ conky.text = [[
 # Weather    |
 #------------+
 ${color orange}${voffset 2}${hr 1}
-#${font GE Inspira Mono:size=12}${alignc}${color green}${execpi 300 curl wttr.in/Edmonton?T0 --silent --max-time 3}${font ubuntu:size=10.5}
-${font Dejavu Sans Mono:size=12}${alignc}${color green}${execpi 300 curl wttr.in/Barcelona?T0 --silent --max-time 3}${font ubuntu:size=10.5}
+#${font GE Inspira Mono:size=12}${alignc}${color green}${execpi 300 curl wttr.in/Porto_Alegre?T0 --silent --max-time 3}${font ubuntu:size=10.5}
+${font Dejavu Sans Mono:size=12}${alignc}${color green}${execpi 300 curl wttr.in/Berlin?T0 --silent --max-time 3}${font ubuntu:size=10.5}
 
 ]]
